--- a/pug/ads.pug
+++ b/pug/ads.pug
@@ -20,12 +20,12 @@ block vars
 					span.like-count 1286
 	mixin contentAds($url)
 		.row
-			.col-xl-3
+			.col-12.col-sm-3
 				.card
 					.card__imgbox.card__imgbox_xs(style='background-image: url('+$url+');')
 						.card-warning-text.hide
 							p
-			.col-xl-9
+			.col-12.col-sm-9
 				.card
 					.card__text.fix-height-135.text-ddd-135
 						block
