--- a/pug/search-result.pug
+++ b/pug/search-result.pug
@@ -29,12 +29,12 @@ block content
 	+searchRes
 	+searchRes
 	.row
-		.col-xl-4
+		.col-12.col-sm-4
 			.card
 				.card-third__imgbox.card__imgbox.card__videobox(style='background-image: url(img/block-img-02.jpg);')
 					.card-warning-text.hide
 						p
-		.col-xl-8
+		.col-12.col-sm-8
 			.card
 				.content-text.fix-height-210.text-ddd-210
 					h3.margin-bottom-10 Интервью с Серафимович Александром про модернизацию новых разработок
