--- a/sass/_circuit.scss
+++ b/sass/_circuit.scss
@@ -25,11 +25,27 @@
 				border: 1px solid $basic-color;
 				background-color: $light-color;
 			}
+			@include lg-block {
+				width: 205px;
+				font-size: 11px;
+				padding: 5px 10px;
+			}
+			@include xs-block {
+				width: 90px;
+				font-size: 9px;
+				line-height: 1.4;
+			}
 			&_line-right {
 				margin-right: 30px;
+				@include md-block {
+					//margin-right: 10px;
+				}
 			}
 			&_line-left{
 				margin-left: 30px;
+				@include md-block {
+					//margin-left: 10px;
+				}
 			}
 			.line {
 				&-center {
