--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -32,7 +32,7 @@
 			font-weight: 400;
 			font-size: 32px;
 			@include md-block {
-				font-size: 22px;
+				font-size: 20px;
 			}
 			@include xs-block {
 				font-size: 20px;
@@ -110,11 +110,17 @@
 			font-family: "Roboto", sans-serif;
 			font-size: 18px;
 			font-weight: inherit;
+			@include md-block {
+				font-size: 14px;
+			}
 		}
 		h3 {
 			font-family: "Roboto", sans-serif;
 			font-size: 16px;
 			font-weight: inherit;
+			@include md-block {
+				font-size: 10px;
+			}
 		}
 		span {
 			color: #bcbdc0;
