--- a/pug/blocks/_block-blog.pug
+++ b/pug/blocks/_block-blog.pug
@@ -28,7 +28,7 @@
 				.article-title.content-titlebox
 					h3 Хочется лета, а вокруг одни офисы! Поеду на Ямайку!
 
-			.article-text.article-preview-text
+			.article-text.article-preview-text.text-ddd
 				p
 					| Ямайка находится в зоне тропического климата с господством северо-восточных пассатов, заметно влияющих, наравне с показателем абсолютной высоты местности, на климат страны В столичном районе средняя температура за год меняется от 24 до 27 °C, а в местечке Гордон-Хилл в горах Блу-Маунтинс — от температура температура температура
 	article(id=ID).article.article-preview
@@ -41,7 +41,7 @@
 				.article-title.content-titlebox
 					h3 Как вам прошедший концерт?
 
-			.article-text.article-preview-text
+			.article-text.article-preview-text.text-ddd
 				p
 					| Ямайка находится в зоне тропического климата с господством северо-восточных пассатов, заметно влияющих, наравне с показателем абсолютной высоты местности, на климат страны В столичном районе средняя температура за год меняется от 24 до 27 °C, а в местечке Гордон-Хилл в горах Блу-Маунтинс — от...
 		.card
