--- a/pug/blocks/_block-links.pug
+++ b/pug/blocks/_block-links.pug
@@ -46,5 +46,5 @@
 					each item in items
 						.card-links__lnkbox
 							a.card-links__lnk.link-icon-save(href="")= item
-	.card
-		a.link-big(href="") &gt;&gt; Галереи
+	//.card
+	//	a.link-big(href="") &gt;&gt; Галереи
