--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -354,6 +354,9 @@
 			font-size: 9px;
 
 		}
+		@include xs-block {
+			min-height: auto;
+		}
 		&>h1, &>h2, &>h3, &>h4, &>h5 {
       font-size: 38px;
 		}
@@ -472,6 +475,10 @@
 				width: 96px;
 				height: 72px;
 				line-height: 36px;
+			}
+			@include xs-block {
+				width: 88px;
+				height: 65px;
 			}
 			img {
 				vertical-align: middle;
@@ -777,6 +784,12 @@
 			}
 			&__imgbox {
 				min-height: 210px;
+				//@include md-block {
+				//	height: 125px;
+				//}
+				@include xs-block {
+					height: 180px;
+				}
 			}
 			&__title {
 				color: #000000;
@@ -1124,6 +1137,9 @@
 		@include sm-block {
 			vertical-align: middle;
 		}
+		@include xs-block {
+			padding-left: 0;
+		}
 	}
 	&__imgbox {
 		min-width: 30px;
@@ -1146,7 +1162,7 @@
 		}
 		@include xs-block {
 			font-size: 12px;
-			max-width: 12px;
+			//max-width: 12px;
 		}
 		i {
 			transition: 0.4s;
@@ -1200,13 +1216,15 @@
 		font-family: "PT Serif", serif;
 		font-size: 20px;
 		font-weight: 400;
-		line-height: 20px;
+		//line-height: 20px;
 		margin-bottom: 5px;
+		line-height: 1.4;
 		&:last-child {
 			margin-bottom: 0;
 		}
 		@include md-block {
 			font-size: 10px;
+			line-height: 1.2;
 		}
 	}
 	&__lnk {
