--- a/pug/ads.pug
+++ b/pug/ads.pug
@@ -6,7 +6,8 @@ block vars
 		.card.margin-bottom-0
 			.content-title
 				.content-titlebox
-					h2= $title
+					h2
+						a(href="#")= $title
 		.card.card-full-head_special
 			.tag
 				.card-date
@@ -22,60 +23,35 @@ block vars
 		.row
 			.col-12.col-sm-3
 				.card
-					.card__imgbox.card__imgbox_xs(style='background-image: url('+$url+');')
+					a.card__imgbox.card__imgbox_xs(href="#" style='background-image: url('+$url+');')
 						.card-warning-text.hide
 							p
 			.col-12.col-sm-9
 				.card
 					.card__text.fix-height-135.text-ddd-135
-						block
+						p
+							| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
+						p
+							| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
 						a.button.card__more(href='#') Читать далее
 block content
 	+baseAds('Продается гараж 18 м2')
 	+contentAds('img/block-img-01.jpg')
-			p
-				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-			p
-				| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
 
 	+baseAds('Недорогой компьютер б\\у')
 	+contentAds('img/block-img-02.jpg')
-			p
-				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-			p
-				| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
 
 	+baseAds('Вывоз мусора, недорого!')
 	+contentAds('img/noimage.png')
-			p
-				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-			p
-				| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
 
 	+baseAds('Сдам в аренду инструмент для ремонта')
 	+contentAds('img/block-img-03.jpg')
-			p
-				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-			p
-				| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
 
 	+baseAds('Несколько хороших книг')
 	+contentAds('img/block-img-04.jpg')
-			p
-				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-			p
-				| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
 
 	+baseAds('Продам 2к квартиру')
 	+contentAds('img/block-img-05.jpg')
-			p
-				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-			p
-				| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
 
 	+baseAds('Отдам даром скотят')
 	+contentAds('img/block-img-06.jpg')
-			p
-				| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
-			p
-				| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический
