--- a/pug/cards/_card-full-advant-news.pug
+++ b/pug/cards/_card-full-advant-news.pug
@@ -2,7 +2,7 @@
 .row
 	.col-xl-12
 		.card.card-full.card_advant-news.bg-color-dark-1.margin-bottom-15.margin-bottom-lg-30
-			.card-full__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
+			a.card-full__imgbox.card__imgbox(href="#", style='background-image: url(img/news-full.jpg);')
 				.card-warning-text.hide
 					p
 			.card__content.card-full__content
