--- a/pug/cards/_card-full_imgfullheight.pug
+++ b/pug/cards/_card-full_imgfullheight.pug
@@ -2,6 +2,7 @@
 	.col-12
 		.card.card-full.card-full_imgbg
 			.card-wrap(style='background-image: url(img/news-full.jpg);')
+				a.card-wrap__imglnk(href="#")
 				.card__content.card-full__content
 					.tagbox
 						.tag
