--- a/pug/cards/_card-third-twothird-slider.pug
+++ b/pug/cards/_card-third-twothird-slider.pug
@@ -2,9 +2,9 @@
 	.card-full-slider-wrap.card-wrap.card-full-wrap
 		.card-full-slider__item
 			.card__imgwrap
-				.card__imgbox.card__imgbox_third(style='background-image: url(img/article-img-01.jpg)')
-				.card__imgbox.card__imgbox_twothird(style='background-image: url(img/article-img-02.jpg)')
+				a.card__imgbox.card__imgbox_third(href="#", style='background-image: url(img/article-img-01.jpg)')
+				a.card__imgbox.card__imgbox_twothird(href="#", style='background-image: url(img/article-img-02.jpg)')
 		.card-full-slider__item
 			.card__imgwrap
-				.card__imgbox.card__imgbox_third(style='background-image: url(img/article-img-01.jpg)')
-				.card__imgbox.card__imgbox_twothird(style='background-image: url(img/article-img-02.jpg)')
+				a.card__imgbox.card__imgbox_third(href="#", style='background-image: url(img/article-img-01.jpg)')
+				a.card__imgbox.card__imgbox_twothird(href="#", style='background-image: url(img/article-img-02.jpg)')
