--- a/pug/cards/_cards-two-thirds_left.pug
+++ b/pug/cards/_cards-two-thirds_left.pug
@@ -3,7 +3,7 @@
 	.col-sm-8
 		.card
 			.card-wrap
-				.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-twothirds-img-01.jpg);')
+				a.card__imgbox.card__imgbox_sm(href="#", style='background-image: url(img/news-twothirds-img-01.jpg);')
 					.card-warning-text.hide
 						p
 				.card__content.cardTwoThirds__content
@@ -19,15 +19,13 @@
 								span.like-count 1286
 					.card__title
 						a(href='#')
-							| Насосно-компрессорные
-							br
-							| трубы ТЭСЦ-1
+							| Насосно-компрессорные  трубы ТЭСЦ-1
 					.card-date
 						span 24 Сентября 2018
 	.col-sm-4
 		.card
 			.card-wrap
-				.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-third-03.jpg);')
+				a.card__imgbox.card__imgbox_sm(href="#", style='background-image: url(img/news-third-03.jpg);')
 					.card-warning-text.hide
 						p
 				.card__content
@@ -43,8 +41,6 @@
 								span.like-count 1286
 					.card__title
 						a(href='#')
-							| Обход управлющего
-							br
-							|  директора БАЗ цеха №1
+							| Обход управлющего директора БАЗ цеха №1
 					.card-date
 						span 24 Сентября 2018
