--- a/pug/profile.pug
+++ b/pug/profile.pug
@@ -14,7 +14,7 @@ block content
 	.row
 		.col-6.col-sm-4.order-0
 			.card
-				.card__imgbox.card__imgbox_xl(style='background-image: url(img/photo-01.png);')
+				a.card__imgbox.card__imgbox_xl(href="#", style='background-image: url(img/photo-01.png);')
 		.col-12.col-sm-8.order-2.order-sm-1
 			.card
 				.content-text
@@ -140,7 +140,7 @@ block content
 	.row
 		.col-12.col-sm-4
 			.card
-				.card__imgbox.card__imgbox_sm(style='background-image: url(img/block-img-14.jpg);')
+				a.card__imgbox.card__imgbox_sm(href="#", style='background-image: url(img/block-img-14.jpg);')
 					.card-warning-text.hide
 						p
 		.col-12.col-sm-8
@@ -154,7 +154,7 @@ block content
 	.row
 		.col-12.col-sm-4
 			.card
-				.card-third__imgbox.card__imgbox(style='background-image: url(img/block-img-13.jpg);')
+				a.card-third__imgbox.card__imgbox(href="#", style='background-image: url(img/block-img-13.jpg);')
 					.card-warning-text.hide
 						p
 		.col-12.col-sm-8
