--- a/pug/search-result.pug
+++ b/pug/search-result.pug
@@ -5,7 +5,8 @@ block vars
 	mixin searchRes()
 		.card
 			.content-text
-				h3.margin-bottom-10 Серафимович, Александр Серафимович
+				h3.margin-bottom-10
+					a(href="#") Серафимович, Александр Серафимович
 				a.link-search(href='') https://portal.omk.ru/news/omk_news...
 				p ... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много
 
@@ -37,7 +38,8 @@ block content
 		.col-12.col-sm-8
 			.card
 				.content-text.fix-height-210.text-ddd-210
-					h3.margin-bottom-10 Интервью с Серафимович Александром про модернизацию новых разработок
+					h3.margin-bottom-10
+						a(href="#") Интервью с Серафимович Александром про модернизацию новых разработок
 					.card-date.card-date_big.margin-bottom-10 11 Декабря 2018, 17:44
 					p
 						| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...
