--- a/pug/cards/_card-full-slider-video.pug
+++ b/pug/cards/_card-full-slider-video.pug
@@ -1,6 +1,6 @@
 .card.card-full.card-full-slider
 	.card-full-slider-wrap.card-wrap.card-full-wrap
 		.card-full-slider__item
-			.card__imgbox.card__videobox.card__imgbox_xl(style='background-image: url(img/news-twothirds-img-01.jpg);')
+			a.card__imgbox.card__videobox.card__imgbox_xl(href="#", style='background-image: url(img/news-twothirds-img-01.jpg);')
 		.card-full-slider__item
-			.card__imgbox.card__videobox.card__imgbox_xl(style='background-image: url(img/article-img-01.jpg);') 
+			a.card__imgbox.card__videobox.card__imgbox_xl(href="#", style='background-image: url(img/article-img-01.jpg);')
