--- a/pug/cards/_cards-half.pug
+++ b/pug/cards/_cards-half.pug
@@ -3,6 +3,7 @@
 	.col-sm-6
 		.card.card-half.card-half_imgbg
 			.card-wrap(style='background-image: url(img/news-half-full-img-01.jpg);')
+				a.card-wrap__imglnk(href="#")
 				.card__content
 					.tagbox
 						.tag
@@ -16,16 +17,12 @@
 								span.like-count 1286
 					.card__title.card-color-light
 						a(href='#')
-							| Насосно-компрессорные
-							br
-							| трубы ТЭСЦ-1
-							br
-							| трубы ТЭСЦ-1
+							| Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1
 					.card-date.card-date_light
 						span 24 Сентября 2018
 	.col-sm-6
 		.card.card-half.bg-color-dark-1
-			.card-half-imgbox.card__imgbox(style='background-image: url(img/news-half-img-01.jpg);')
+			a.card-half-imgbox.card__imgbox(href="#", style='background-image: url(img/news-half-img-01.jpg);')
 				.card-average-text
 					p Оценка: Нормально!
 			.card__content.card-half__content
@@ -41,8 +38,6 @@
 							span.like-count 1286
 				.card__title
 					a(href='#')
-						| Насосно-компрессорные
-						br
-						| трубы ТЭСЦ-1
+						| Насосно-компрессорные трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
