--- a/pug/cards/_cards-third.pug
+++ b/pug/cards/_cards-third.pug
@@ -1,7 +1,7 @@
 .row
 	.col-sm-4
 		.card.bg-color-dark-1
-			.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-third-01.jpg);')
+			a.card__imgbox.card__imgbox_sm(href="#", style='background-image: url(img/news-third-01.jpg);')
 				.card-warning-text.hide
 					p
 			.card__content
@@ -17,14 +17,12 @@
 							span.like-count 1286
 				.card__title
 					a(href='#')
-						| Насосно-компрессорные
-						br
-						| трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1
+						| Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
 	.col-sm-4
 		.card.bg-color-dark-1
-			.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-third-02.jpg);')
+			a.card__imgbox.card__imgbox_sm(href="#", style='background-image: url(img/news-third-02.jpg);')
 				.card-warning-text
 					p Оценка: ПЛОХО!
 			.card__content
@@ -40,15 +38,15 @@
 							span.like-count 1286
 				.card__title
 					a(href='#')
-						| Обход управлющего 
-						br
-						|  директора БАЗ цеха №1
+						| Обход управлющего директора БАЗ цеха №1
 				.card-date
 					span 24 Сентября 2018
 	.col-sm-4
 		.card
 			.card-wrap(style='background-image: url(img/news-third-full-img-01.jpg);')
+				a.card-wrap__imglnk(href="#")
 				.card__content.card__content_sm
+
 					.tagbox
 						.tag
 							button.button.button-tag.button-tag_dark Новости ПС
@@ -61,8 +59,6 @@
 								span.like-count 1286
 					.card__title.card-color-light
 						a(href='#')
-							| Насосно-компрессорные 
-							br
-							| трубы ТЭСЦ-1
+							| Насосно-компрессорные трубы ТЭСЦ-1
 					.card-date.card-date_light
 						span 24 Сентября 2018
