--- a/pug/cards/_cards-two-thirds_right.pug
+++ b/pug/cards/_cards-two-thirds_right.pug
@@ -2,7 +2,7 @@
 .row
 	.col-sm-4
 		.card.bg-color-dark-1
-			.card__imgbox.card__imgbox_sm(style='background-image: url(img/news-third-04.jpg);')
+			a.card__imgbox.card__imgbox_sm(href="#", style='background-image: url(img/news-third-04.jpg);')
 				.card-succes-text
 					p Оценка "Хорошо!"
 			.card__content
@@ -18,14 +18,13 @@
 							span.like-count 1286
 				.card__title
 					a(href='#')
-						| Обход управлющего
-						br
-						|  директора БАЗ цеха №1
+						| Обход управлющего директора БАЗ цеха №1
 				.card-date
 					span 24 Сентября 2018
 	.col-sm-8
 		.card
 			.card-wrap(style='background-image: url(img/news-twothirds-full-img-01.jpg);')
+				a.card-wrap__imglnk(href="#")
 				.card__content.card__content_sm
 					.tagbox
 						.tag
@@ -39,8 +38,6 @@
 								span.like-count 1286
 					.card__title.card-color-light
 						a(href='#')
-							| Насосно-компрессорные
-							br
-							| трубы ТЭСЦ-1
+							| Насосно-компрессорные трубы ТЭСЦ-1
 					.card-date.card-date_light
 						span 24 Сентября 2018
