--- a/pug/tables.pug
+++ b/pug/tables.pug
@@ -1,7 +1,7 @@
 extends modules/_base
 
 block vars
-	- var pageTitle = '404';
+	- var pageTitle = 'Таблицы';
 block content
 	.card.margin-bottom-15
 		.content-title
