--- a/sass/_post-info.scss
+++ b/sass/_post-info.scss
@@ -6,10 +6,17 @@
 		float: left;
 		max-width: 970px;
 		font-size: 22px;
-		line-height: 20px;
+		line-height: 1.4;
 		font-weight: 400;
 		color: $light-color;
 		text-align: left;
+		@include lg-block {
+			font-size: 17px;
+		}
+		@include md-block {
+			font-size: 12px;
+			max-width: 350px;
+		}
 		.slider-number {
 			color: $thin-color;
 			margin-right: 5px;
