--- a/sass/general/_modalMain.scss
+++ b/sass/general/_modalMain.scss
@@ -11,6 +11,12 @@
 			@media (min-width: 1230px) {
 				max-width: 1200px;
 			}
+			@media (min-width: 992px) {
+				max-width: 960px;
+			}
+			@media (min-width: 768px) {
+				max-width: 560px;
+			}
 		}
 
 		&-content {
@@ -31,6 +37,9 @@
 
 		&-wrap {
 			padding: 0 30px;
+			@include md-block {
+				padding: 0 15px;
+			}
 		}
 		&__item {
 			// padding: 0 30px;
@@ -45,6 +54,9 @@
 				width: 100%;
 				// height: 100%;
 				object-fit: cover;
+				@include md-block {
+					height: 205px;
+				}
 			}
 		}
 		&-arrow {
@@ -78,6 +90,9 @@
 				max-width: 150px;
 				overflow: hidden;
 				cursor: pointer;
+				@include lg-block {
+					height: 85px;
+				}
 				img {
 					width: 100%;
 					height: 100%;
